CSDEV/objects/HAE_Case_Product__c.object
<CustomObject>
    <description>HAE: This is for mapping Case with Product.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Product_LIne_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HAE: it lookups to Product records.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case Products</relationshipLabel>
        <relationshipName>Case_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAE_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HAE_Region__c</fullName>
        <description>HAE: defines the Case Region.</description>
        <formula>Case__r.HAE_Region2__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_ShortWatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShortWatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Boxes</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Cubic Ft.</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Foot</fullName>
                </value>
                <value>
                    <fullName>GL</fullName>
                </value>
                <value>
                    <fullName>Grams</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>Kg</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>Mg</fullName>
                </value>
                <value>
                    <fullName>mL</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Ounce</fullName>
                </value>
                <value>
                    <fullName>Pack</fullName>
                </value>
                <value>
                    <fullName>Pint</fullName>
                </value>
                <value>
                    <fullName>Pounds</fullName>
                </value>
                <value>
                    <fullName>Quart</fullName>
                </value>
                <value>
                    <fullName>Roll</fullName>
                </value>
                <value>
                    <fullName>Square Feet</fullName>
                </value>
                <value>
                    <fullName>Yard</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case Product</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Case Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>